[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-s3sniff"
version = "0.1.0"
description = "Flag risky cloud-bucket ACLs/policies from a listing or policy JSON"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "tactical", "s3sniff"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/s3sniff"

[project.scripts]
s3sniff = "s3sniff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["s3sniff"]
